--- a/public/index.html
+++ b/public/index.html
@@ -1999,7 +1999,7 @@
         }
       }
     </style>
-    <title>hnqa-test2 | Nắmtay.vn</title>
+    <title>Quang Anh - Hồng Vân</title>
     <meta data-n-head="ssr" charset="utf-8" />
     <meta
       data-n-head="ssr"
