--- a/public/index.html
+++ b/public/index.html
@@ -1999,7 +1999,7 @@
         }
       }
     </style>
-    <title>Quang Anh - Hồng Vân</title>
+    <title>Quang Anh - Hồng Nhân</title>
     <meta data-n-head="ssr" charset="utf-8" />
     <meta
       data-n-head="ssr"
@@ -32755,13 +32755,7 @@
         const n = document.createElement("img");
         return (n.src = e), t.appendChild(n), t;
       }
-      (window.onscroll = function () {
-        window.__editor__ ||
-          (window.innerHeight + window.scrollY >=
-          document.body.offsetHeight - 180
-            ? (document.getElementById("call-to-donate").style.bottom = "180px")
-            : (document.getElementById("call-to-donate").style.bottom = "0px"));
-      }),
+    
         (window.getAlbumImages = function (e) {
           const t = document.getElementById(e);
           return t ? [...t.querySelectorAll("img")].map((e) => e.src) : [];
